# IoTSecurity

./: CMakeLists.txt  Config_notes.txt  Presentation.pptx  README.md
Graphics/: Graphics for IoT.ipynb
src/: main.cpp
src/AllocationServicesMatrix/: AllocationServicesMatrix.cpp  AllocationServicesMatrix.h
src/Cluster/: Cluster.cpp  Cluster.h
src/Constellation/: Constellation.cpp  Constellation.h
src/Orchestrator/: Orchestrator.h
src/Request/: Request.cpp  Request.h
src/Satellite/: Satellite.cpp  Satellite.h
src/Service/: Service.cpp  Service.h
src/Simulation/: Simulation.cpp  Simulation.h
src/Solution/: Solution.cpp  Solution.h
src/TabuSearch/: TabuSearch.cpp  TabuSearch.h
src/VisibilityMatrix/: VisibilityMatrix.cpp  VisibilityMatrix.h
